<resources>
    <string name="app_name">Cookbook</string>
    <string name="delete">Delete</string>
    <string name="content_add_recipe">Add recipe</string>
    <string name="title_delete">Delete?</string>
    <string name="text_delete">Are you sure you want to delete %s?</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="hint_search_filter">Search filter</string>
    <string name="desc_the_image_of_the_recipe">The image of the recipe</string>
    <string name="title_add_new">Add new</string>
    <string name="hint_title">Title</string>
    <string name="btn_save">Save</string>
    <string name="hint_desc">Description</string>
    <string name="hint_category">Category</string>
    <string name="desc_loading_error">Loading error</string>
    <string name="btn_refresh">Refresh</string>
    <string name="title_login">Login…</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="btn_login">Login</string>
    <string name="desc_authenticate">Authenticate</string>
    <string name="str_auth">Please login or register to continue</string>
    <string name="btn_sync">Synchronize</string>
    <string name="btn_logout">Logout</string>
    <string name="title_recipe">Recipe</string>
</resources>